--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -45,6 +45,7 @@ all:
           children:
             puppet_grnoc:
               hosts:
+                build-stage.grnoc.iu.edu:
                 puppet.grnoc.iu.edu:
                 puppet-stage2.grnoc.iu.edu:
             puppet_nwave:
@@ -70,6 +71,7 @@ all:
             backup.grnoc.iu.edu:
             backup.ictc.ilight.net:
             bgeels-dev-7.grnoc.iu.edu:
+            build-stage.grnoc.iu.edu:
             carto.areon.net:
             carto.bldc.grnoc.iu.edu:
             carto.misen.grnoc.iu.edu:
