--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -122,6 +122,7 @@ all:
             grafana.indiana.gigapop.net:
             grafana.intl.grnoc.iu.edu:
             grafana.linkoregon.org:
+            grafana.lwp.grnoc.iu.edu:
             grafana.net.cen.ct.gov:
             grafana.net.pennren.net:
             grafana.net.rt.iu.edu:
