add new i2 hosts

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -285,8 +285,11 @@ all:
             openbgp.wash2.net.internet2.edu:
             rabbitmq.tsds.bldc.net.internet2.edu:
             rabbitmq.tsds.wash2.net.internet2.edu:
+            rabbit2.tsds.ctc.net.internet2.edu:
             services.tsds.bldc.net.internet2.edu:
             services.tsds.wash2.net.internet2.edu:
+            services2.tsds.ctc.net.internet2.edu:
+            snmp.tsds.ctc.net.internet2.edu:
             snapp-collector.bldc.net.internet2.edu:
             snapp-collector.wash2.net.internet2.edu:
 
