add new oshean hosts

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -198,6 +198,7 @@ all:
             routerproxy.bldc.net.internet2.edu:
             rpki.bldc.indiana.gigapop.net:
             rpki.ctc.indiana.gigapop.net:
+            sandbox.bldc.oshean.org:
             services.tsds.bldc.grnoc.iu.edu:
             services.tsds.ctc.grnoc.iu.edu:
             simp.grnoc.iu.edu:
@@ -248,6 +249,7 @@ all:
             storage5.cloud.ctc.grnoc.iu.edu:
             storage6.cloud.ctc.grnoc.iu.edu:
             storage7.cloud.ctc.grnoc.iu.edu:
+            syslog.bldc.oshean.org:
             syslog.grnoc.iu.edu:
             syslog.wash2.net.internet2.edu:
             tools-01.globalnoc.mcnc.org:
