--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -190,10 +190,13 @@ all:
             os-comp5.bldc.grnoc.iu.edu:
             os-store1.bldc.grnoc.iu.edu:
             os-store2.bldc.grnoc.iu.edu:
+            otp-01.grnoc.iu.edu:
+            otp-02.grnoc.iu.edu:
             packrat.grnoc.iu.edu:
             pwa-dev2.grnoc.iu.edu:
             puppet.grnoc.iu.edu:
             puppet-stage2.grnoc.iu.edu:
+            radius.noc.onenet.net:
             rabbitmq.tsds.bldc.grnoc.iu.edu:
             routerproxy.bldc.net.internet2.edu:
             rpki.bldc.indiana.gigapop.net:
@@ -249,6 +252,7 @@ all:
             storage5.cloud.ctc.grnoc.iu.edu:
             storage6.cloud.ctc.grnoc.iu.edu:
             storage7.cloud.ctc.grnoc.iu.edu:
+            syslog.bldc.net.cen.ct.gov:
             syslog.bldc.oshean.org:
             syslog.grnoc.iu.edu:
             syslog.wash2.net.internet2.edu:
@@ -285,6 +289,8 @@ all:
             mon.bldc.net.internet2.edu:
             mon.wash2.net.internet2.edu:
             openbgp.wash2.net.internet2.edu:
+            otp.bldc.net.internet2.edu:
+            otp.ctc.net.internet2.edu:
             rabbitmq.tsds.bldc.net.internet2.edu:
             rabbitmq.tsds.wash2.net.internet2.edu:
             rabbit2.tsds.ctc.net.internet2.edu:
