add jamf-endpoint host

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -327,6 +327,7 @@ all:
             haproxy.ctc.nwave.noaa.gov:
             idp.bldc.nwave.noaa.gov:
             idp.ctc.nwave.noaa.gov:
+            jamf-endpoint.ctc.nwave.noaa.gov:
             kerb.bldc.nwave.noaa.gov:
             kerb.ctc.nwave.noaa.gov:
             map-builder.bldc.nwave.noaa.gov:
