add python test host

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -196,6 +196,7 @@ all:
             pwa-dev2.grnoc.iu.edu:
             puppet.grnoc.iu.edu:
             puppet-stage2.grnoc.iu.edu:
+            python-test.grnoc.iu.edu:
             radius.noc.onenet.net:
             rabbitmq.tsds.bldc.grnoc.iu.edu:
             routerproxy.bldc.net.internet2.edu:
