--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -195,7 +195,7 @@ all:
             packrat.grnoc.iu.edu:
             pwa-dev2.grnoc.iu.edu:
             puppet.grnoc.iu.edu:
-            puppet-stage2.grnoc.iu.edu:
+            puppet7.grnoc.iu.edu:
             python-test.grnoc.iu.edu:
             radius.noc.onenet.net:
             rabbitmq.tsds.bldc.grnoc.iu.edu:
