add new git configs for n-wave

--- a/group_vars/globalnoc.yml
+++ b/group_vars/globalnoc.yml
@@ -63,3 +63,6 @@ gitconfig:
     - name: https://github.grnoc.iu.edu
       username: jdratlif
       helper: cache --timeout 14400
+    - name: https://github.nwave.noaa.gov
+      username: jdratlif
+      helper: cache --timeout 14400
