--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -99,7 +99,6 @@ all:
             cosign.ctc.grnoc.iu.edu:
             cosign.bldc.net.cen.ct.gov:
             cosign.bldc.oshean.org:
-            daldoyle-dev-7.grnoc.iu.edu:
             db.areon.net:
             db-01.grnoc.iu.edu:
             db-02.grnoc.iu.edu:
@@ -351,6 +350,7 @@ all:
             portal-demo.ctc.nwave.noaa.gov:
             ps.ctc.nwave.noaa.gov:
             puppet.nwave.noaa.gov:
+            puppet7.nwave.noaa.gov:
             simp-poller.silv.nwave.noaa.gov:
             simp-poller.silv2.nwave.noaa.gov:
             simp-data-silv.ctc.nwave.noaa.gov:
