append domain name to ssh config on nwave

--- a/group_vars/bastion_nwave.yml
+++ b/group_vars/bastion_nwave.yml
@@ -16,3 +16,5 @@ ssh_host_configs:
     Hostname: db2.bldc
   "dns-ctc":
     Hostname: db2.ctc
+  "* !*.nwave.noaa.gov":
+    Hostname: "%h.nwave.noaa.gov"
