add host to nwave

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -351,6 +351,7 @@ all:
             ps.ctc.nwave.noaa.gov:
             puppet.nwave.noaa.gov:
             puppet7.nwave.noaa.gov:
+            ps-test-jdratlif.ctc.nwave.noaa.gov:
             simp-poller.silv.nwave.noaa.gov:
             simp-poller.silv2.nwave.noaa.gov:
             simp-data-silv.ctc.nwave.noaa.gov:
