update bastion ssh config

--- a/group_vars/bastion_grnoc.yml
+++ b/group_vars/bastion_grnoc.yml
@@ -360,3 +360,6 @@ ssh_host_configs:
   # SNAPP/SIMP servers
   "oshean-snapp oshean-simp":
     Hostname: snapp.oshean.org
+
+  "* !*.grnoc.iu.edu":
+    Hostname: "%h.grnoc.iu.edu"
