--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -371,12 +371,12 @@ all:
             snapp-shard.ctc.nwave.noaa.gov:
             snapp-test.ctc.nwave.noaa.gov:
             snapp-test.silv.nwave.noaa.gov:
-            storage.cloud.bldc.grnoc.iu.edu:
-            storage.cloud.ctc.grnoc.iu.edu:
-            storage2.cloud.bldc.grnoc.iu.edu:
-            storage2.cloud.ctc.grnoc.iu.edu:
-            storage3.cloud.bldc.grnoc.iu.edu:
-            storage3.cloud.ctc.grnoc.iu.edu:
+            storage.cloud.bldc.nwave.noaa.gov:
+            storage.cloud.ctc.nwave.noaa.gov:
+            storage2.cloud.bldc.nwave.noaa.gov:
+            storage2.cloud.ctc.nwave.noaa.gov:
+            storage3.cloud.bldc.nwave.noaa.gov:
+            storage3.cloud.ctc.nwave.noaa.gov:
             syslog.bldc.nwave.noaa.gov:
             syslog.ctc.nwave.noaa.gov:
             tools.bldc.nwave.noaa.gov:
